ruta isn't rutaing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Textruta</h1>
-    <div style="background-color: blue; color: yellow;" id="textruta"></div>
+    <div id="textruta"></div>
+    <script src="textruta.js"></script>
 </body>
 </html>
