text is now texting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Textruta</h1>
-    <div id="textruta"></div>
+    <pre id="textruta"></pre>
     <script src="textruta.js"></script>
 </body>
 </html>
